render after fixing html example

--- a/index.tex
+++ b/index.tex
@@ -231,7 +231,7 @@
 
 \title{Effective Data Science}
 \author{Zak Varty}
-\date{2025-01-17}
+\date{2025-01-23}
 
 \begin{document}
 \maketitle
@@ -1145,7 +1145,7 @@ for package development during the live session this week.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -1154,11 +1154,10 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \textbf{loaded via a namespace (and not attached):}
 \emph{compiler(v.4.4.2)}, \emph{fastmap(v.1.2.0)}, \emph{cli(v.3.6.3)},
 \emph{tools(v.4.4.2)}, \emph{htmltools(v.0.5.8.1)},
-\emph{rstudioapi(v.0.17.1)}, \emph{yaml(v.2.3.10)},
-\emph{Rcpp(v.1.0.14)}, \emph{pander(v.0.6.5)}, \emph{rmarkdown(v.2.29)},
-\emph{knitr(v.1.49)}, \emph{jsonlite(v.1.8.9)}, \emph{xfun(v.0.50)},
-\emph{digest(v.0.6.37)}, \emph{rlang(v.1.1.4)}, \emph{png(v.0.1-8)} and
-\emph{evaluate(v.1.0.3)}
+\emph{yaml(v.2.3.10)}, \emph{Rcpp(v.1.0.14)}, \emph{pander(v.0.6.5)},
+\emph{rmarkdown(v.2.29)}, \emph{knitr(v.1.49)},
+\emph{jsonlite(v.1.8.9)}, \emph{xfun(v.0.50)}, \emph{digest(v.0.6.37)},
+\emph{rlang(v.1.1.4)}, \emph{png(v.0.1-8)} and \emph{evaluate(v.1.0.3)}
 
 \chapter{Naming Files}\label{workflows-naming}
 
@@ -1865,7 +1864,7 @@ match with the team we are working in and the task that is at hand.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -1880,9 +1879,8 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{pkgconfig(v.2.0.3)}, \emph{htmltools(v.0.5.8.1)},
 \emph{png(v.0.1-8)}, \emph{rmarkdown(v.2.29)},
 \emph{lifecycle(v.1.0.4)}, \emph{cli(v.3.6.3)}, \emph{pander(v.0.6.5)},
-\emph{vctrs(v.0.6.5)}, \emph{compiler(v.4.4.2)},
-\emph{rstudioapi(v.0.17.1)}, \emph{tools(v.4.4.2)}, \emph{hms(v.1.1.3)},
-\emph{pillar(v.1.10.1)}, \emph{evaluate(v.1.0.3)},
+\emph{vctrs(v.0.6.5)}, \emph{compiler(v.4.4.2)}, \emph{tools(v.4.4.2)},
+\emph{hms(v.1.1.3)}, \emph{pillar(v.1.10.1)}, \emph{evaluate(v.1.0.3)},
 \emph{Rcpp(v.1.0.14)}, \emph{yaml(v.2.3.10)}, \emph{rlang(v.1.1.4)} and
 \emph{jsonlite(v.1.8.9)}
 
@@ -2843,7 +2841,7 @@ tested.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -2864,9 +2862,9 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{lifecycle(v.1.0.4)}, \emph{stringr(v.1.5.1)},
 \emph{compiler(v.4.4.2)}, \emph{Rcpp(v.1.0.14)},
 \emph{testthat(v.3.2.3)}, \emph{timechange(v.0.3.0)},
-\emph{rstudioapi(v.0.17.1)}, \emph{digest(v.0.6.37)},
-\emph{R6(v.2.5.1)}, \emph{pillar(v.1.10.1)}, \emph{tools(v.4.4.2)},
-\emph{lubridate(v.1.9.4)} and \emph{desc(v.1.4.3)}
+\emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)}, \emph{pillar(v.1.10.1)},
+\emph{tools(v.4.4.2)}, \emph{lubridate(v.1.9.4)} and
+\emph{desc(v.1.4.3)}
 
 \chapter*{Workflows Checklist}\label{workflows-checklist}
 \addcontentsline{toc}{chapter}{Workflows Checklist}
@@ -3017,7 +3015,7 @@ functions you have written.
 
 \markright{Introduction}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -3050,7 +3048,7 @@ service known as an API.
 
 \chapter{Tabular Data}\label{data-tabular}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-important-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-important-color-frame, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-important-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-important-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 undergoing heavy restructuring and may be confusing or incomplete.
@@ -3576,7 +3574,7 @@ values.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -3595,16 +3593,15 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{fastmap(v.1.2.0)}, \emph{yaml(v.2.3.10)},
 \emph{lifecycle(v.1.0.4)}, \emph{compiler(v.4.4.2)},
 \emph{dplyr(v.1.1.4)}, \emph{Rcpp(v.1.0.14)}, \emph{pkgconfig(v.2.0.3)},
-\emph{tidyr(v.1.3.1)}, \emph{rstudioapi(v.0.17.1)},
-\emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)}, \emph{utf8(v.1.2.4)},
-\emph{readr(v.2.1.5)}, \emph{tidyselect(v.1.2.1)},
-\emph{parallel(v.4.4.2)}, \emph{vroom(v.1.6.5)},
-\emph{pillar(v.1.10.1)}, \emph{withr(v.3.0.2)}, \emph{tools(v.4.4.2)}
+\emph{tidyr(v.1.3.1)}, \emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)},
+\emph{utf8(v.1.2.4)}, \emph{readr(v.2.1.5)}, \emph{tidyselect(v.1.2.1)},
+\emph{vroom(v.1.6.5)}, \emph{pillar(v.1.10.1)},
+\emph{parallel(v.4.4.2)}, \emph{withr(v.3.0.2)}, \emph{tools(v.4.4.2)}
 and \emph{bit64(v.4.5.2)}
 
 \chapter{Web Scraping}\label{data-webscraping}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -3658,7 +3655,7 @@ this:
   \DataTypeTok{\textless{}}\KeywordTok{title}\DataTypeTok{\textgreater{}}\NormalTok{Page title}\DataTypeTok{\textless{}/}\KeywordTok{title}\DataTypeTok{\textgreater{}}
 \DataTypeTok{\textless{}/}\KeywordTok{head}\DataTypeTok{\textgreater{}}
 \DataTypeTok{\textless{}}\KeywordTok{body}\DataTypeTok{\textgreater{}}
-  \DataTypeTok{\textless{}}\KeywordTok{h1}\OtherTok{ id}\OperatorTok{=}\StringTok{\textquotesingle{}first\textquotesingle{}}\DataTypeTok{\textgreater{}}\NormalTok{A level 1 heading}\DataTypeTok{\textless{}/}\KeywordTok{h1}\DataTypeTok{\textgreater{}}
+  \DataTypeTok{\textless{}}\KeywordTok{h1}\DataTypeTok{\textgreater{}}\NormalTok{ id=\textquotesingle{}first\textquotesingle{}\textgreater{}A level 1 heading}\DataTypeTok{\textless{}/}\KeywordTok{h1}\DataTypeTok{\textgreater{}}
   \DataTypeTok{\textless{}}\KeywordTok{p}\DataTypeTok{\textgreater{}}\NormalTok{Hello World!}\DataTypeTok{\textless{}/}\KeywordTok{p}\DataTypeTok{\textgreater{}}
   \DataTypeTok{\textless{}}\KeywordTok{p}\DataTypeTok{\textgreater{}}\NormalTok{Here is some plain text }\DecValTok{\&amp;} \DataTypeTok{\textless{}}\KeywordTok{b}\DataTypeTok{\textgreater{}}\NormalTok{some bold text.}\DataTypeTok{\textless{}/}\KeywordTok{b}\DataTypeTok{\textgreater{}\textless{}/}\KeywordTok{p}\DataTypeTok{\textgreater{}}
   \DataTypeTok{\textless{}}\KeywordTok{img}\OtherTok{ src}\OperatorTok{=}\StringTok{\textquotesingle{}myimg.png\textquotesingle{}}\OtherTok{ width}\OperatorTok{=}\StringTok{\textquotesingle{}100\textquotesingle{}}\OtherTok{ height}\OperatorTok{=}\StringTok{\textquotesingle{}100\textquotesingle{}}\DataTypeTok{\textgreater{}}
@@ -4208,7 +4205,7 @@ tibble.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -4226,14 +4223,13 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{fastmap(v.1.2.0)}, \emph{yaml(v.2.3.10)},
 \emph{lifecycle(v.1.0.4)}, \emph{stringr(v.1.5.1)},
 \emph{compiler(v.4.4.2)}, \emph{Rcpp(v.1.0.14)},
-\emph{pkgconfig(v.2.0.3)}, \emph{rstudioapi(v.0.17.1)},
-\emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)}, \emph{utf8(v.1.2.4)},
-\emph{pillar(v.1.10.1)}, \emph{curl(v.6.1.0)}, \emph{magrittr(v.2.0.3)},
-\emph{tools(v.4.4.2)} and \emph{xml2(v.1.3.6)}
+\emph{pkgconfig(v.2.0.3)}, \emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)},
+\emph{utf8(v.1.2.4)}, \emph{pillar(v.1.10.1)}, \emph{curl(v.6.1.0)},
+\emph{magrittr(v.2.0.3)}, \emph{tools(v.4.4.2)} and \emph{xml2(v.1.3.6)}
 
 \chapter{APIs}\label{data-apis}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -4579,7 +4575,7 @@ little bit of set up.
   Tell R your credentials for GeoNames.
 \end{enumerate}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-warning-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-warning-color-frame, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{Warning}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-warning-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-warning-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-warning-color}{\faExclamationTriangle}\hspace{0.5em}{Warning}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 We could use the following code to tell R our credentials, \textbf{but
 we absolutely should not}.
@@ -4902,7 +4898,7 @@ credentials safe, and that don't do more work than is needed.
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -4915,17 +4911,16 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{xfun(v.0.50)}, \emph{glue(v.1.8.0)}, \emph{knitr(v.1.49)},
 \emph{htmltools(v.0.5.8.1)}, \emph{rmarkdown(v.2.29)},
 \emph{cli(v.3.6.3)}, \emph{pander(v.0.6.5)}, \emph{compiler(v.4.4.2)},
-\emph{httr(v.1.4.7)}, \emph{rstudioapi(v.0.17.1)},
-\emph{tools(v.4.4.2)}, \emph{curl(v.6.1.0)}, \emph{evaluate(v.1.0.3)},
-\emph{Rcpp(v.1.0.14)}, \emph{yaml(v.2.3.10)}, \emph{rlang(v.1.1.4)} and
-\emph{jsonlite(v.1.8.9)}
+\emph{httr(v.1.4.7)}, \emph{tools(v.4.4.2)}, \emph{curl(v.6.1.0)},
+\emph{evaluate(v.1.0.3)}, \emph{Rcpp(v.1.0.14)}, \emph{yaml(v.2.3.10)},
+\emph{rlang(v.1.1.4)} and \emph{jsonlite(v.1.8.9)}
 
 \chapter*{Checklist}\label{data-checklist}
 \addcontentsline{toc}{chapter}{Checklist}
 
 \markboth{Checklist}{Checklist}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -5118,7 +5113,7 @@ way, to drive decision making both within and outwith the organisation.
 
 \chapter{Data Wrangling}\label{edav-wrangling}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -6046,14 +6041,14 @@ lower-case or upper-case letters which follow an underscore.
 \begin{Highlighting}[]
 \FunctionTok{head}\NormalTok{(poorly\_named\_df)}
 \CommentTok{\#\textgreater{} \# A tibble: 6 x 11}
-\CommentTok{\#\textgreater{}   observation\_id   V1\_A   V2\_B     V3\_C   V4\_D   V5\_E   V6\_F   V7\_G    V8\_H}
-\CommentTok{\#\textgreater{}            \textless{}int\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}    \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}}
-\CommentTok{\#\textgreater{} 1              1  0.215 {-}2.39   1.73    {-}0.611 {-}1.12   0.797 {-}1.03  {-}0.856 }
-\CommentTok{\#\textgreater{} 2              2 {-}0.364  1.26   0.981    0.563  0.970 {-}0.209 {-}0.182  2.32  }
-\CommentTok{\#\textgreater{} 3              3 {-}0.418  0.474 {-}2.36     1.03   0.196 {-}1.05   1.04  {-}0.0272}
-\CommentTok{\#\textgreater{} 4              4 {-}0.949 {-}1.83  {-}0.00179  0.874  0.613 {-}0.846 {-}0.375 {-}2.36  }
-\CommentTok{\#\textgreater{} 5              5  0.515 {-}1.07   0.116   {-}0.390 {-}0.457 {-}0.914  0.212 {-}0.736 }
-\CommentTok{\#\textgreater{} 6              6 {-}0.574  0.461  0.0208  {-}0.599  0.752 {-}1.59   0.524  2.20  }
+\CommentTok{\#\textgreater{}   observation\_id    V1\_A    V2\_B   V3\_C    V4\_D   V5\_E   V6\_F    V7\_G   V8\_H}
+\CommentTok{\#\textgreater{}            \textless{}int\textgreater{}   \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}   \textless{}dbl\textgreater{}  \textless{}dbl\textgreater{}}
+\CommentTok{\#\textgreater{} 1              1  1.24   {-}0.262  {-}0.579  0.0562 {-}0.386  1.96   0.346  {-}1.67 }
+\CommentTok{\#\textgreater{} 2              2 {-}0.311   1.14   {-}0.671  2.53    0.365  0.532 {-}3.74   {-}0.324}
+\CommentTok{\#\textgreater{} 3              3  0.0966 {-}0.0263  1.57   0.310  {-}0.541  0.942  0.0624 {-}0.504}
+\CommentTok{\#\textgreater{} 4              4 {-}0.165   0.428   1.78  {-}0.165   0.192 {-}1.29   0.952   0.194}
+\CommentTok{\#\textgreater{} 5              5 {-}1.37   {-}1.98   {-}1.32  {-}1.09    0.682 {-}1.21   1.05   {-}0.818}
+\CommentTok{\#\textgreater{} 6              6  1.90    0.467   0.573  1.30   {-}1.72   0.899  0.282  {-}0.593}
 \CommentTok{\#\textgreater{} \# i 2 more variables: V9\_I \textless{}dbl\textgreater{}, V10\_J \textless{}dbl\textgreater{}}
 \end{Highlighting}
 \end{Shaded}
@@ -6236,7 +6231,7 @@ We have:
 \textbf{Platform:} x86\_64-apple-darwin20
 
 \textbf{locale:}
-en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar C\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8
+en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8\textbar\textbar C\textbar\textbar en\_GB.UTF-8\textbar\textbar en\_GB.UTF-8
 
 \textbf{attached base packages:} \emph{stats}, \emph{graphics},
 \emph{grDevices}, \emph{utils}, \emph{datasets}, \emph{methods} and
@@ -6255,10 +6250,10 @@ en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\textbar en\_US.UTF-8\textbar\t
 \emph{tibble(v.3.2.1)}, \emph{fastmap(v.1.2.0)}, \emph{yaml(v.2.3.10)},
 \emph{lifecycle(v.1.0.4)}, \emph{stringr(v.1.5.1)},
 \emph{compiler(v.4.4.2)}, \emph{Rcpp(v.1.0.14)},
-\emph{pkgconfig(v.2.0.3)}, \emph{rstudioapi(v.0.17.1)},
-\emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)}, \emph{tidyselect(v.1.2.1)},
-\emph{utf8(v.1.2.4)}, \emph{pillar(v.1.10.1)}, \emph{magrittr(v.2.0.3)},
-\emph{tools(v.4.4.2)} and \emph{withr(v.3.0.2)}
+\emph{pkgconfig(v.2.0.3)}, \emph{digest(v.0.6.37)}, \emph{R6(v.2.5.1)},
+\emph{tidyselect(v.1.2.1)}, \emph{utf8(v.1.2.4)},
+\emph{pillar(v.1.10.1)}, \emph{magrittr(v.2.0.3)}, \emph{tools(v.4.4.2)}
+and \emph{withr(v.3.0.2)}
 
 \chapter{Exploratory Data Analysis}\label{edav-analysis}
 
@@ -7603,7 +7598,7 @@ points:
 
 \part{Introduction}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-important-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-important-color-frame, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-important-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-important-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 currently a dumping ground for ideas, and we don't recommend reading it.
@@ -7615,7 +7610,7 @@ at \url{https://github.com/zakvarty/data_science_notes}.
 
 \chapter{Reproducibility}\label{production-reproducibility}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -8127,7 +8122,7 @@ With these ideas you can now use good data to do good science.
 
 \chapter{Explainability}\label{production-explainability}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
@@ -8558,7 +8553,7 @@ models.
 
 \chapter{Scalability}\label{production-scalability}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-important-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-important-color-frame, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-important-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-important-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 currently a dumping ground for ideas, and we don't recommend reading it.
@@ -8656,7 +8651,7 @@ the time it completes and look at the difference of those.
 \NormalTok{t\_end }\OtherTok{\textless{}{-}} \FunctionTok{Sys.time}\NormalTok{()}
 
 \NormalTok{t\_end }\SpecialCharTok{{-}}\NormalTok{ t\_start}
-\CommentTok{\#\textgreater{} Time difference of 0.5064578 secs}
+\CommentTok{\#\textgreater{} Time difference of 0.5021989 secs}
 \end{Highlighting}
 \end{Shaded}
 
@@ -8670,7 +8665,7 @@ too.
   \FunctionTok{Sys.sleep}\NormalTok{(}\FloatTok{0.5}\NormalTok{)}
 \NormalTok{)}
 \CommentTok{\#\textgreater{}    user  system elapsed }
-\CommentTok{\#\textgreater{}   0.001   0.000   0.504}
+\CommentTok{\#\textgreater{}   0.000   0.000   0.503}
 \end{Highlighting}
 \end{Shaded}
 
@@ -8685,7 +8680,7 @@ code are taking the most time to run.
 \FunctionTok{tic}\NormalTok{() }
 \FunctionTok{Sys.sleep}\NormalTok{(}\FloatTok{0.5}\NormalTok{) }\CommentTok{\# YOUR CODE }
 \FunctionTok{toc}\NormalTok{()}
-\CommentTok{\#\textgreater{} 0.504 sec elapsed}
+\CommentTok{\#\textgreater{} 0.506 sec elapsed}
 \end{Highlighting}
 \end{Shaded}
 
@@ -8701,9 +8696,9 @@ With \texttt{\{tictoc\}} we can get fancy
 \FunctionTok{tic}\NormalTok{(}\StringTok{"second, hard part"}\NormalTok{)}
 \FunctionTok{Sys.sleep}\NormalTok{(}\DecValTok{3}\NormalTok{)}
 \FunctionTok{toc}\NormalTok{(}\AttributeTok{log =} \ConstantTok{TRUE}\NormalTok{)}
-\CommentTok{\#\textgreater{} second, hard part: 3.008 sec elapsed}
+\CommentTok{\#\textgreater{} second, hard part: 3.005 sec elapsed}
 \FunctionTok{toc}\NormalTok{()}
-\CommentTok{\#\textgreater{} total: 3.517 sec elapsed}
+\CommentTok{\#\textgreater{} total: 3.514 sec elapsed}
 \end{Highlighting}
 \end{Shaded}
 
@@ -8854,7 +8849,7 @@ This is equally true for functions within packages.
 \CommentTok{\#\textgreater{}         "logical", "numeric", "factor"))}
 \CommentTok{\#\textgreater{}     c(rep(NA, n\_left), x, rep(NA, n\_right))}
 \CommentTok{\#\textgreater{} \}}
-\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fba8a4a3c70\textgreater{}}
+\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fe2e94a22a8\textgreater{}}
 \CommentTok{\#\textgreater{} \textless{}environment: namespace:eds\textgreater{}}
 \end{Highlighting}
 \end{Shaded}
@@ -8870,7 +8865,7 @@ some compiled C++ code.
 \CommentTok{\#\textgreater{} \{}
 \CommentTok{\#\textgreater{}     UseMethod("arrange")}
 \CommentTok{\#\textgreater{} \}}
-\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fba8b8689b0\textgreater{}}
+\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fe2eba6afd0\textgreater{}}
 \CommentTok{\#\textgreater{} \textless{}environment: namespace:dplyr\textgreater{}}
 \end{Highlighting}
 \end{Shaded}
@@ -8883,7 +8878,7 @@ obvious reason) no R source code.
 \NormalTok{mean}
 \CommentTok{\#\textgreater{} function (x, ...) }
 \CommentTok{\#\textgreater{} UseMethod("mean")}
-\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fba8274a9c8\textgreater{}}
+\CommentTok{\#\textgreater{} \textless{}bytecode: 0x7fe2ea0eb488\textgreater{}}
 \CommentTok{\#\textgreater{} \textless{}environment: namespace:base\textgreater{}}
 \end{Highlighting}
 \end{Shaded}
@@ -9030,13 +9025,13 @@ Iterate over a single object with \texttt{map()}.
 \NormalTok{mu }\OtherTok{\textless{}{-}} \FunctionTok{c}\NormalTok{(}\SpecialCharTok{{-}}\DecValTok{10}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{10}\NormalTok{)}
 \NormalTok{purrr}\SpecialCharTok{::}\FunctionTok{map}\NormalTok{(}\AttributeTok{.x =}\NormalTok{ mu, }\AttributeTok{.f =}\NormalTok{ rnorm, }\AttributeTok{n =} \DecValTok{5}\NormalTok{)}
 \CommentTok{\#\textgreater{} [[1]]}
-\CommentTok{\#\textgreater{} [1]  {-}9.687805  {-}8.371496  {-}8.729832 {-}11.120552 {-}10.334015}
+\CommentTok{\#\textgreater{} [1]  {-}9.579257 {-}10.676386  {-}9.400915  {-}9.218366  {-}9.086277}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[2]]}
-\CommentTok{\#\textgreater{} [1]  0.1534114 {-}1.3350648  0.7062538 {-}0.5633030 {-}1.1556981}
+\CommentTok{\#\textgreater{} [1]  0.47160960 {-}1.11749037 {-}0.18138404  0.03131673  0.18141408}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[3]]}
-\CommentTok{\#\textgreater{} [1] 10.591297  9.342731 11.110070  8.143277 10.036150}
+\CommentTok{\#\textgreater{} [1] 12.138235 10.037268  9.408818 10.732196  9.832022}
 \end{Highlighting}
 \end{Shaded}
 
@@ -9051,7 +9046,7 @@ Iterate over multiple objects \texttt{map2()} and \texttt{pmap()}.
 \CommentTok{\#\textgreater{} [1] {-}10 {-}10 {-}10 {-}10 {-}10}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[2]]}
-\CommentTok{\#\textgreater{} [1]  0.03626844 {-}0.21129591 {-}0.15601918  0.05018852 {-}0.10746944}
+\CommentTok{\#\textgreater{} [1]  0.09386997  0.01743952 {-}0.05431083 {-}0.05665815  0.06032472}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[3]]}
 \CommentTok{\#\textgreater{} [1] 10 10 10 10 10}
@@ -9073,7 +9068,7 @@ Iterate over multiple objects \texttt{map2()} and \texttt{pmap()}.
 \CommentTok{\#\textgreater{} [1] {-}10 {-}10 {-}10 {-}10 {-}10}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[2]]}
-\CommentTok{\#\textgreater{} [1] {-}0.140996058  0.097719568  0.107271314  0.009781948  0.023183190}
+\CommentTok{\#\textgreater{} [1] {-}0.110881342  0.143293628  0.005435558 {-}0.188897468 {-}0.095325008}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[3]]}
 \CommentTok{\#\textgreater{} [1] 10 10 10 10 10}
@@ -9107,13 +9102,13 @@ furrr}\label{easy-parallelisation-with-furrr}
   \AttributeTok{.options =}\NormalTok{ furrr}\SpecialCharTok{::}\FunctionTok{furrr\_options}\NormalTok{(}\AttributeTok{seed =} \ConstantTok{TRUE}\NormalTok{),}
   \AttributeTok{n =} \DecValTok{5}\NormalTok{) }
 \CommentTok{\#\textgreater{} [[1]]}
-\CommentTok{\#\textgreater{} [1] {-}11.751294 {-}10.458282 {-}10.728360 {-}10.589310  {-}7.562764}
+\CommentTok{\#\textgreater{} [1] {-}11.419517  {-}9.490876  {-}9.310767  {-}9.221929  {-}9.598806}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[2]]}
-\CommentTok{\#\textgreater{} [1] {-}0.02956282 {-}0.25632089  0.46127565 {-}1.51559833  0.38168009}
+\CommentTok{\#\textgreater{} [1] {-}0.7153120 {-}0.9468889 {-}0.1404883 {-}0.8001627 {-}0.6821034}
 \CommentTok{\#\textgreater{} }
 \CommentTok{\#\textgreater{} [[3]]}
-\CommentTok{\#\textgreater{} [1] 12.023730 11.941894  9.102389  8.674188 10.962068}
+\CommentTok{\#\textgreater{} [1]  8.196245 10.150709 10.260366  8.324649  9.261138}
 \end{Highlighting}
 \end{Shaded}
 
@@ -9190,7 +9185,7 @@ beyond our scope, but good to know exists. Starting point: Advanced R
 
 \markboth{Checklist}{Checklist}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-important-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-important-color-frame, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-important-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-important-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-important-color}{\faExclamation}\hspace{0.5em}{Important}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 currently a dumping ground for ideas, and we don't recommend reading it.
@@ -10566,7 +10561,7 @@ randomised response survey designs or data anonymisation.
 
 \chapter{Reading List}\label{reading-list}
 
-\begin{tcolorbox}[enhanced jigsaw, leftrule=.75mm, bottomtitle=1mm, toprule=.15mm, colbacktitle=quarto-callout-note-color!10!white, breakable, colback=white, bottomrule=.15mm, opacityback=0, colframe=quarto-callout-note-color-frame, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, titlerule=0mm, toptitle=1mm, opacitybacktitle=0.6, arc=.35mm, rightrule=.15mm, coltitle=black, left=2mm]
+\begin{tcolorbox}[enhanced jigsaw, coltitle=black, opacityback=0, left=2mm, titlerule=0mm, breakable, colback=white, opacitybacktitle=0.6, colbacktitle=quarto-callout-note-color!10!white, bottomtitle=1mm, toptitle=1mm, colframe=quarto-callout-note-color-frame, bottomrule=.15mm, leftrule=.75mm, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Note}, toprule=.15mm, arc=.35mm, rightrule=.15mm]
 
 Effective Data Science is still a work-in-progress. This chapter is
 largely complete and just needs final proof reading.
